# fncad

./: Cargo.toml  README.md  flake.nix  result
src/: dummy_solver.rs  lib.rs  main.rs  renderer.rs  solve.rs
