[package]
name = "quick-start-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = "0.10.0"
cas-rs = "0.1.0"
cobyla = "0.6.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
eframe = "0.31.1"
egui = "0.31.1"
nalgebra = "0.33.2"
strum = { version = "0.27.1", features = ["derive"] }
